--- a/demo-cluster/.k8s-gen/user-manifests.yaml
+++ b/demo-cluster/.k8s-gen/user-manifests.yaml
@@ -29,6 +29,8 @@ spec:
     limits.cpu: "1"  
     limits.memory: "1Gi" 
     pods: "2"   
+    services: "5"  
+    persistentvolumeclaims: "4"
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -45,19 +47,27 @@ spec:
   - chart: dao-2048
     helm:
       values: |
-        replicaCount: 1
+        replicaCount: 3
 
         resources: 
           limits:
-            cpu: 500m
+            cpu: 1500m
             memory: 128Mi
           requests:
             cpu: 100m
             memory: 128Mi
 
+        nodeSelector:
+          role: storage
+        
+        tolerations:
+          - key: role
+            value: storage
+            operator: Equal
+            effect: NoSchedule
+      
         service:
           type: LoadBalancer
-          loadBalancerIP: "172.18.250.0"
 
     repoURL: http://daocloud.github.io/dao-2048/
     targetRevision: "1.2.1"
